Add plugin keys to the manual for the Gigabeat S, plus a couple of missing ones for the Gigabeat F.  Also add missing equalizer keys for the S.  Vast majority is from FS#10073 by Teruaki Kawashima.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21006 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/configure_rockbox/bookmarking.tex
+++ b/manual/configure_rockbox/bookmarking.tex
@@ -75,8 +75,8 @@
       \ActionStdCancel
       & Exits Recent Bookmark menu\\
       %
-      \nopt{GIGABEATS_PAD}{\ActionBmDelete}  
-      & Deletes the currently selected bookmark\\
+      \nopt{GIGABEAT_S_PAD}{\ActionBmDelete
+      & Deletes the currently selected bookmark\\}
       %
       \ActionStdContext  
       & Enters the context menu for the selected bookmark.\\
