--- a/manual/main_menu/main.tex
+++ b/manual/main_menu/main.tex
@@ -57,8 +57,8 @@ jump straight to that track.
     \ActionStdCancel
     & Exits Recent Bookmark menu\\
     %
-    \nopt{GIGABEATS_PAD}{\ActionBmDelete}  
-    & Deletes the currently selected bookmark\\
+    \nopt{GIGABEAT_S_PAD}{\ActionBmDelete
+    & Deletes the currently selected bookmark\\}
     %
     \ActionStdContext  
     & Enters the context menu for the selected bookmark.\\
