--- a/manual/plugins/chessbox.tex
+++ b/manual/plugins/chessbox.tex
@@ -36,7 +36,8 @@ the game.
     \opt{RECORDER_PAD}{\ButtonPlay}
     \opt{ONDIO_PAD}{\ButtonMenu}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IAUDIO_X5_PAD%
-	    ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonSelect}
+      ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
+      {\ButtonSelect}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
     & Pick up / Drop piece\\
     \opt{RECORDER_PAD}{\ButtonFOne}
@@ -45,13 +46,13 @@ the game.
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonRight}
     \opt{IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec}
     \opt{IRIVER_H10_PAD}{\ButtonFF}
-    \opt{GIGABEAT_PAD}{\ButtonMenu}
+    \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonMenu}
     \opt{MROBE100_PAD}{\ButtonDisplay}
     & Change level\\
     \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
     \opt{ONDIO_PAD}{Long \ButtonMenu}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonPlay}
-    \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay}
+    \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,GIGABEAT_S_PAD}{\ButtonPlay}
     \opt{SANSA_E200_PAD}{\ButtonSelect+\ButtonRight}
     \opt{SANSA_C200_PAD}{\ButtonVolUp}
     \opt{GIGABEAT_PAD}{\ButtonA}
@@ -60,7 +61,7 @@ the game.
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonPower}
-    \opt{GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
+    \opt{GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonPower}
     & Show the menu\\
     \end{btnmap}
 \end{table}
