--- a/manual/plugins/dice.tex
+++ b/manual/plugins/dice.tex
@@ -8,7 +8,8 @@ numbers as well as the total of the rolled dice.
     \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
     \opt{ONDIO_PAD}{\ButtonMenu}
     \opt{GIGABEAT_PAD}{\ButtonA}
-    \opt{PLAYER_PAD,IAUDIO_X5_PAD,IRIVER_H10_PAD,IPOD_4G_PAD,IPOD_3G_PAD,MROBE100_PAD}{\ButtonPlay}
+    \opt{PLAYER_PAD,IAUDIO_X5_PAD,IRIVER_H10_PAD,IPOD_4G_PAD,IPOD_3G_PAD%
+      ,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonPlay}
     \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonUp}
         & Roll dice again\\
     \opt{PLAYER_PAD}{\ButtonStop}
@@ -16,6 +17,7 @@ numbers as well as the total of the rolled dice.
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu+\ButtonSelect}
     \opt{IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD%
         ,IRIVER_H10_PAD}{\ButtonPower}
+    \opt{GIGABEAT_S_PAD}{\ButtonBack}
         & Quit\\
     \end{btnmap}
 \end{table}
