--- a/manual/plugins/jewels.tex
+++ b/manual/plugins/jewels.tex
@@ -13,25 +13,30 @@ after every one hundred points and randomly clears several jewels.
 \begin{table}
   \begin{btnmap}{}{}
     \ButtonLeft/\ButtonRight/\\
-    \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD,IAUDIO_X5_PAD,GIGABEAT_S_PAD}
-        {\ButtonUp/\ButtonDown}
+    \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,SANSA_E200_PAD%
+      ,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD,IAUDIO_X5_PAD,GIGABEAT_S_PAD}
+      {\ButtonUp/\ButtonDown}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu/\ButtonPlay}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp/\ButtonScrollDown}
     & Move the cursor around the jewels \\
     \opt{RECORDER_PAD,IRIVER_H10_PAD}{\ButtonPlay}
     \opt{ONDIO_PAD}{\ButtonMenu}
-    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD,IAUDIO_X5_PAD,GIGABEAT_S_PAD}
-        {\ButtonSelect}
+    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD%
+      ,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD,IAUDIO_X5_PAD,GIGABEAT_S_PAD}
+      {\ButtonSelect}
     & Select a jewel \\
     \opt{RECORDER_PAD,IRIVER_H10_PAD}{Long \ButtonPlay}%
     \opt{ONDIO_PAD}{Long \ButtonMenu}%
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode{} or Long \ButtonSelect}
     \opt{GIGABEAT_S_PAD}{\ButtonMenu{} or Long \ButtonSelect}
-    \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD,IAUDIO_X5_PAD}%
-        {Long \ButtonSelect}%
+    \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
+      ,MROBE100_PAD,IAUDIO_X5_PAD}{Long \ButtonSelect}%
     & Show the in-game menu \\
-    \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff & Exit \\}%
-    \opt{IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD,IAUDIO_X5_PAD}{\ButtonPower & Exit \\}%
+    \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}
+      {\ButtonOff & Exit \\}%
+    \opt{IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD%
+      ,IAUDIO_X5_PAD}{\ButtonPower & Exit \\}%
+    \opt{GIGABEAT_S_PAD}{\ButtonBack & Exit \\}%
     
   \end{btnmap}
 \end{table}
