--- a/manual/plugins/jpegviewer.tex
+++ b/manual/plugins/jpegviewer.tex
@@ -15,7 +15,8 @@ greyscale library}.
 \begin{table}
 \begin{btnmap}{}{}
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
-        ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonUp\ / \ButtonDown}%
+      ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
+      {\ButtonUp\ / \ButtonDown}%
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu\ / \ButtonPlay}%
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp\ / \ButtonScrollDown} %
         / \ButtonLeft\ / \ButtonRight
@@ -26,7 +27,7 @@ greyscale library}.
         ,SANSA_C200_PAD,MROBE100_PAD}{\ButtonSelect}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonScrollFwd}
     \opt{IRIVER_H10_PAD}{\ButtonPlay}
-    \opt{GIGABEAT_PAD}{\ButtonVolUp}
+    \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolUp}
     & Zoom in\\
     \opt{RECORDER_PAD}{\ButtonOn}
     \opt{ONDIO_PAD}{\ButtonMenu+\ButtonDown}
@@ -34,7 +35,7 @@ greyscale library}.
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonScrollBack}
     \opt{IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{Long \ButtonSelect}
     \opt{IRIVER_H10_PAD}{Long \ButtonPlay}
-    \opt{GIGABEAT_PAD}{\ButtonVolDown}
+    \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolDown}
     \opt{MROBE100_PAD}{\ButtonPlay}
     & Zoom out\\
     \opt{RECORDER_PAD}{\ButtonFThree}
@@ -47,6 +48,7 @@ greyscale library}.
     \opt{SANSA_E200_PAD}{\ButtonScrollFwd}
     \opt{SANSA_C200_PAD}{\ButtonVolUp}
     \opt{GIGABEAT_PAD}{\ButtonA+\ButtonRight}
+    \opt{GIGABEAT_S_PAD}{\ButtonNext}
     \opt{MROBE100_PAD}{\ButtonDisplay+\ButtonRight}
     & Next jpeg in directory\\
     \opt{RECORDER_PAD}{\ButtonFTwo}
@@ -58,6 +60,7 @@ greyscale library}.
     \opt{SANSA_E200_PAD}{\ButtonScrollBack}
     \opt{SANSA_C200_PAD}{\ButtonVolDown}
     \opt{GIGABEAT_PAD}{\ButtonA+\ButtonLeft}
+    \opt{GIGABEAT_S_PAD}{\ButtonPrev}
     \opt{MROBE100_PAD}{\ButtonDisplay+\ButtonLeft}
     & Previous jpeg in directory\\
     \opt{SANSA_E200_PAD,SANSA_C200_PAD}{%currently only defined for the sansa pads
@@ -67,7 +70,7 @@ greyscale library}.
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonPower}
-    \opt{GIGABEAT_PAD,MROBE100_PAD}{\ButtonMenu}
+    \opt{GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonMenu}
     & Show menu\\
 \end{btnmap}
 \end{table}
