--- a/manual/plugins/minesweeper.tex
+++ b/manual/plugins/minesweeper.tex
@@ -2,7 +2,8 @@
 \subsection{Minesweeper}
 \screenshot{plugins/images/ss-minesweeper}{Minesweeper plugin}{img:minesweeper}
 The classic game of minesweeper. Use 
-\opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD}
+\opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
+     ,SANSA_E200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD}
     {the \ButtonUp\ and \ButtonDown\ keys}
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonScrollFwd/\ButtonScrollBack }
 \opt{IRIVER_H10_PAD}{\ButtonScrollUp/\ButtonScrollDown}
@@ -10,7 +11,8 @@ to select the required percentage of mines to set the difficulty
 then press the 
 \opt{RECORDER_PAD}{\ButtonOn}
 \opt{ONDIO_PAD}{\ButtonMenu}
-\opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{\ButtonSelect}
+\opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD%
+     ,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonSelect}
 \opt{IAUDIO_X5_PAD}{\ButtonRec}
 \opt{IRIVER_H10_PAD}{\ButtonFF}key to begin.
 
@@ -26,7 +28,8 @@ the location of a mine, it can be tagged to avoid accidentally
  \begin{btnmap}{}{}
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu{} / \ButtonPlay{} / \ButtonLeft{} / \ButtonRight}
   \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD%
-      ,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonUp{} / \ButtonDown{} / \ButtonLeft{} / \ButtonRight}
+      ,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
+      {\ButtonUp{} / \ButtonDown{} / \ButtonLeft{} / \ButtonRight}
   \opt{IRIVER_H10_PAD}
       {\ButtonScrollUp{} / \ButtonScrollDown{} / \ButtonLeft{} / \ButtonRight}
   & Move the cursor across the minefield \\
@@ -38,7 +41,7 @@ the location of a mine, it can be tagged to avoid accidentally
   \opt{ONDIO_PAD}{\ButtonMenu}
   \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn{} / \ButtonRec}
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect}
-  \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay}
+  \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,GIGABEAT_S_PAD}{\ButtonPlay}
   \opt{SANSA_E200_PAD}{\ButtonRec}
   \opt{SANSA_C200_PAD}{\ButtonSelect{} / \ButtonVolDown}
   \opt{GIGABEAT_PAD}{\ButtonA}
@@ -47,7 +50,8 @@ the location of a mine, it can be tagged to avoid accidentally
   %
   \opt{RECORDER_PAD}{\ButtonFTwo/\ButtonPlay}
   \opt{ONDIO_PAD}{Long \ButtonMenu}
-  \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonSelect}
+  \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD%
+      ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonSelect}
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{Long \ButtonSelect}
   \opt{IRIVER_H10_PAD}{\ButtonRew}
   \opt{SANSA_C200_PAD}{Long \ButtonSelect{} / \ButtonVolUp}
@@ -60,12 +64,13 @@ the location of a mine, it can be tagged to avoid accidentally
   \opt{IAUDIO_X5_PAD,SANSA_C200_PAD}{\ButtonRec}
   \opt{SANSA_E200_PAD}{Long \ButtonRec}
   \opt{IRIVER_H10_PAD}{\ButtonRew+\ButtonPlay}
-  \opt{GIGABEAT_PAD,MROBE100_PAD}{\ButtonMenu}
+  \opt{GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonMenu}
   & Display the current game status \\
   %
   \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
   \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
+  \opt{GIGABEAT_S_PAD}{\ButtonBack}
   & Exit the game \\
 \end{btnmap}
 \end{table}
