--- a/manual/plugins/pegbox.tex
+++ b/manual/plugins/pegbox.tex
@@ -17,6 +17,7 @@ block and crosses which allow you to choose a replacement block.
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp, \ButtonScrollDown, }
     \opt{SANSA_E200_PAD}{\ButtonUp, \ButtonDown, }
     \opt{GIGABEAT_PAD}{\ButtonUp, \ButtonDown, }
+    \opt{GIGABEAT_S_PAD}{\ButtonUp, \ButtonDown, }
     \opt{MROBE100_PAD}{\ButtonUp, \ButtonDown, }
     \opt{SANSA_C200_PAD}{\ButtonUp, \ButtonDown, }
 
@@ -28,6 +29,7 @@ block and crosses which allow you to choose a replacement block.
     \opt{IRIVER_H10_PAD}{\ButtonLeft, \ButtonRight}
     \opt{SANSA_E200_PAD}{\ButtonLeft, \ButtonRight}
     \opt{GIGABEAT_PAD}{\ButtonLeft, \ButtonRight}
+    \opt{GIGABEAT_S_PAD}{\ButtonLeft, \ButtonRight}
     \opt{MROBE100_PAD}{\ButtonLeft, \ButtonRight}
     \opt{SANSA_C200_PAD}{\ButtonLeft, \ButtonRight}
         & to move around\\
@@ -40,6 +42,7 @@ block and crosses which allow you to choose a replacement block.
     \opt{IRIVER_H10_PAD}{\ButtonPlay}
     \opt{SANSA_E200_PAD}{\ButtonSelect}
     \opt{GIGABEAT_PAD}{\ButtonSelect}
+    \opt{GIGABEAT_S_PAD}{\ButtonSelect}
     \opt{MROBE100_PAD}{\ButtonSelect}
     \opt{SANSA_C200_PAD}{\ButtonSelect}
         & to select/save\\
@@ -52,6 +55,7 @@ block and crosses which allow you to choose a replacement block.
     \opt{IRIVER_H10_PAD}{Long \ButtonFF}
     \opt{SANSA_E200_PAD}{\ButtonRec}
     \opt{GIGABEAT_PAD}{\ButtonA}
+    \opt{GIGABEAT_S_PAD}{\ButtonMenu}
     \opt{MROBE100_PAD}{\ButtonPlay}
     \opt{SANSA_C200_PAD}{\ButtonRec}
         & to restart level\\
@@ -64,6 +68,7 @@ block and crosses which allow you to choose a replacement block.
     \opt{IRIVER_H10_PAD}{\ButtonFF + \ButtonScrollUp}
     \opt{SANSA_E200_PAD}{\ButtonScrollBack}
     \opt{GIGABEAT_PAD}{\ButtonVolUp}
+    \opt{GIGABEAT_S_PAD}{\ButtonVolUp}
     \opt{MROBE100_PAD}{\ButtonMenu}
     \opt{SANSA_C200_PAD}{\ButtonVolUp}
         & to go up a level\\
@@ -74,7 +79,7 @@ block and crosses which allow you to choose a replacement block.
         \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonRec}
         \opt{IRIVER_H10_PAD}{\ButtonFF + \ButtonScrollDown}
         \opt{SANSA_E200_PAD}{\ButtonScrollFwd}
-        \opt{SANSA_C200_PAD,GIGABEAT_PAD}{\ButtonVolDown}
+        \opt{SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolDown}
         \opt{MROBE100_PAD}{\ButtonDisplay}
         & to go down a level\\
     }
@@ -87,6 +92,7 @@ block and crosses which allow you to choose a replacement block.
     \opt{IRIVER_H10_PAD}{\ButtonPower}
     \opt{SANSA_E200_PAD}{\ButtonPower}
     \opt{GIGABEAT_PAD}{\ButtonPower}
+    \opt{GIGABEAT_S_PAD}{\ButtonBack}
     \opt{MROBE100_PAD}{\ButtonPower}
     \opt{SANSA_C200_PAD}{\ButtonPower}
         & to quit\\
