--- a/manual/plugins/rockboy.tex
+++ b/manual/plugins/rockboy.tex
@@ -13,7 +13,7 @@ the gnuboy emulator. To start a game, open a ROM file saved as \fname{.gb} or
 \begin{table}
     \begin{btnmap}{}{}
     \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD%
-        ,SANSA_C200_PAD,GIGABEAT_PAD}{\ButtonUp{} / \ButtonDown}
+        ,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonUp{} / \ButtonDown}
     \opt{IPOD_4G_PAD}{Tap \ButtonPlay{} / \ButtonMenu}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp{} / \ButtonScrollDown}
     / \ButtonLeft{} / \ButtonRight
@@ -25,7 +25,7 @@ the gnuboy emulator. To start a game, open a ROM file saved as \fname{.gb} or
     \opt{IPOD_4G_PAD}{Tap \btnfnt{Top-Right}}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay}
     \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonSelect}
-    \opt{GIGABEAT_PAD}{\ButtonVolUp}
+    \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolUp}
     & A button\\
     %
     \opt{RECORDER_PAD}{\ButtonFTwo}
@@ -34,7 +34,7 @@ the gnuboy emulator. To start a game, open a ROM file saved as \fname{.gb} or
     \opt{IPOD_4G_PAD}{Tap \btnfnt{Top-Left}}
     \opt{IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec}
     \opt{IRIVER_H10_PAD}{\ButtonFF}
-    \opt{GIGABEAT_PAD}{\ButtonVolDown}
+    \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolDown}
     & B button\\
     %
     \opt{RECORDER_PAD}{\ButtonFThree}
@@ -46,6 +46,7 @@ the gnuboy emulator. To start a game, open a ROM file saved as \fname{.gb} or
     \opt{SANSA_C200_PAD}{\ButtonVolDown}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
     \opt{GIGABEAT_PAD}{\ButtonA}
+    \opt{GIGABEAT_S_PAD}{\ButtonPlay}
     & Start\\
     %
     \nopt{IAUDIO_X5_PAD,IRIVER_H10_PAD}{
@@ -54,7 +55,7 @@ the gnuboy emulator. To start a game, open a ROM file saved as \fname{.gb} or
         \opt{IPOD_4G_PAD}{Tap \btnfnt{Bottom-Left}}
         \opt{SANSA_E200_PAD}{\ButtonScrollFwd}
         \opt{SANSA_C200_PAD}{\ButtonVolUp}
-        \opt{GIGABEAT_PAD}{\ButtonSelect}
+        \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonSelect}
         & Select\\
         %
     }
@@ -68,7 +69,7 @@ the gnuboy emulator. To start a game, open a ROM file saved as \fname{.gb} or
     \opt{IRIVER_H100_PAD}{\ButtonMode}
     \opt{IPOD_4G_PAD}{\ButtonHold{} switch}
     \opt{IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD,IRIVER_H10_PAD}{\ButtonPower}
-    \opt{GIGABEAT_PAD}{\ButtonMenu}
+    \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonMenu}
     & Open Rockboy menu\\
     \end{btnmap}
 \end{table}
