--- a/manual/plugins/blackjack.tex
+++ b/manual/plugins/blackjack.tex
@@ -16,7 +16,7 @@ visit\\
     \begin{btnmap}{}{}
     \multicolumn{2}{c}{\textbf{In menu}}\\\hline
     \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
-    \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay} 
+    \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,GIGABEAT_S_PAD}{\ButtonPlay} 
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD,SANSA_C200_PAD,MROBE100_PAD}{\ButtonSelect}
     \opt{ONDIO_PAD}{\ButtonMenu}
     \opt{GIGABEAT_PAD}{\ButtonA}
@@ -26,11 +26,12 @@ visit\\
     \opt{ONDIO_PAD,IAUDIO_X5_PAD,SANSA_C200_PAD}{\ButtonDown}
     \opt{IRIVER_H10_PAD}{\ButtonRight}
     \opt{SANSA_E200_PAD}{\ButtonRec}
-    \opt{GIGABEAT_PAD}{\ButtonMenu}
+    \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonMenu}
     \opt{MROBE100_PAD}{\ButtonPlay}
         & Resume saved game\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonSelect}
-    \opt{RECORDER_PAD,IAUDIO_X5_PAD,IPOD_4G_PAD,IPOD_3G_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonRight}
+    \opt{RECORDER_PAD,IAUDIO_X5_PAD,IPOD_4G_PAD,IPOD_3G_PAD,GIGABEAT_PAD%
+      ,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonRight}
     \opt{ONDIO_PAD,SANSA_E200_PAD}{\ButtonUp}
     \opt{IRIVER_H10_PAD}{\ButtonLeft}
     \opt{SANSA_C200_PAD}{\ButtonRec}
@@ -38,10 +39,12 @@ visit\\
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
+    \opt{GIGABEAT_S_PAD}{\ButtonBack}
         & Quit\\\hline
     \multicolumn{2}{c}{\textbf{In game}}\\\hline
     \ButtonLeft{} / \ButtonRight{} /\\
-    \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,GIGABEAT_PAD,MROBE100_PAD,SANSA_C200_PAD}
+    \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
+        ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD,SANSA_C200_PAD}
       {\ButtonUp{} / \ButtonDown}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{\ButtonScrollFwd{} / \ButtonScrollBack}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp{} / \ButtonScrollDown}
@@ -51,18 +54,18 @@ visit\\
     \opt{IRIVER_H10_PAD}{\ButtonPlay}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonSelect}
     \opt{ONDIO_PAD}{\ButtonLeft}
-    \opt{GIGABEAT_PAD}{\ButtonVolUp}
+    \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolUp}
     \opt{MR100_PAD}{\ButtonMenu}
     & Hit (Draw new card)\\
     \opt{RECORDER_PAD}{\ButtonFTwo}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD}{\ButtonRec}
     \opt{IRIVER_H10_PAD}{\ButtonFF}
     \opt{ONDIO_PAD,IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRight}
-    \opt{GIGABEAT_PAD}{\ButtonVolDown}
+    \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolDown}
     \opt{MROBE100_PAD}{\ButtonDisplay}
     & Stay (End hand)\\
     \opt{RECORDER_PAD}{\ButtonFThree}
-    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,GIGABEAT_PAD}{\ButtonSelect}
+    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonSelect}
     \opt{IAUDIO_X5_PAD}{\ButtonPlay}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
     \opt{ONDIO_PAD}{\ButtonUp}
@@ -74,12 +77,13 @@ visit\\
     \opt{ONDIO_PAD,IAUDIO_X5_PAD,SANSA_C200_PAD}{\ButtonDown}
     \opt{IRIVER_H10_PAD}{\ButtonRight}
     \opt{SANSA_E200_PAD}{\ButtonRec}
-    \opt{GIGABEAT_PAD}{\ButtonMenu}
+    \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonMenu}
     \opt{MROBE100_PAD}{\ButtonPlay}
         & Save game\\
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
-        & Return to menu or cancel\\\hline
+    \opt{GIGABEAT_S_PAD}{\ButtonBack}
+        & Return to menu or cancel\\
     \end{btnmap}
 \end{table}
