--- a/manual/plugins/bubbles.tex
+++ b/manual/plugins/bubbles.tex
@@ -11,17 +11,19 @@ fired. Points are awarded depending on how quickly the level was completed.
 \begin{table}
     \begin{btnmap}{}{}
     \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
-    \opt{IPOD_4G_PAD,IPOD_3G_PAD,IRIVER_H10_PAD}{\ButtonPlay}
+    \opt{IPOD_4G_PAD,IPOD_3G_PAD,IRIVER_H10_PAD,GIGABEAT_S_PAD}{\ButtonPlay}
     \opt{ONDIO_PAD}{\ButtonMenu}
-    \opt{IAUDIO_X5_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
+    \opt{IAUDIO_X5_PAD,MROBE100_PAD}{\ButtonPower}
     \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonUp}
+    \opt{GIGABEAT_PAD}{\ButtonA}
         & Pause game\\
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,IRIVER_H10_PAD%
-        ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonLeft{} / \ButtonRight}
+        ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
+        {\ButtonLeft{} / \ButtonRight}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonScrollFwd{} / \ButtonScrollBack}
         & Aim the bubble\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,IPOD_4G_PAD,IPOD_3G_PAD%
-        ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonSelect}
+        ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonSelect}
     \opt{RECORDER_PAD}{\ButtonPlay}
     \opt{ONDIO_PAD}{\ButtonUp}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
@@ -32,12 +34,13 @@ fired. Points are awarded depending on how quickly the level was completed.
     \opt{RECORDER_PAD}{\ButtonFOne}
     \opt{ONDIO_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonDown}
     \opt{IRIVER_H10_PAD}{\ButtonFF}
-    \opt{GIGABEAT_PAD,MROBE100_PAD}{\ButtonMenu}
+    \opt{GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonMenu}
         & Save game\\
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
         ,MROBE100_PAD}{\ButtonPower}
+    \opt{GIGABEAT_S_PAD}{\ButtonBack}
         & Exit to menu\\
     \end{btnmap}
 \end{table}
