--- a/manual/plugins/calculator.tex
+++ b/manual/plugins/calculator.tex
@@ -10,7 +10,8 @@ standard calculator. Pressing the ``1st'' and ``2nd'' buttons will toggle betwee
 \begin{btnmap}{}{}
     \ButtonLeft{} / \ButtonRight{} /
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
-        ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonUp{} / \ButtonDown}
+      ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
+      {\ButtonUp{} / \ButtonDown}
     \opt{SANSA_E200_PAD}{/}
     \opt{scrollwheel}{\ButtonScrollFwd{} / \ButtonScrollBack}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp{} / \ButtonScrollDown}
@@ -19,7 +20,8 @@ standard calculator. Pressing the ``1st'' and ``2nd'' buttons will toggle betwee
     \opt{RECORDER_PAD}{\ButtonPlay}
     \opt{ONDIO_PAD}{\ButtonMenu}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IAUDIO_X5_PAD%
-        ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonSelect}
+      ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
+      {\ButtonSelect}
     \opt{IRIVER_H10_PAD}{\ButtonPlay}
     & Select a button\\
     %
@@ -29,6 +31,7 @@ standard calculator. Pressing the ``1st'' and ``2nd'' buttons will toggle betwee
             ,SANSA_C200_PAD}{\ButtonRec}
         \opt{IRIVER_H10_PAD}{\ButtonRew}
         \opt{GIGABEAT_PAD}{\ButtonA}
+        \opt{GIGABEAT_S_PAD}{\ButtonPlay}
         \opt{MROBE100_PAD}{\ButtonDisplay}
         & Delete last entered digit or clear after calculation\\
         %
@@ -42,14 +45,17 @@ standard calculator. Pressing the ``1st'' and ``2nd'' buttons will toggle betwee
     \opt{RECORDER_PAD}{\ButtonFThree}
     \opt{ONDIO_PAD}{Long \ButtonMenu}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
-    \opt{IPOD_4G_PAD,IPOD_3G_PAD,IRIVER_H10_PAD,IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay}
+    \opt{IPOD_4G_PAD,IPOD_3G_PAD,IRIVER_H10_PAD,IAUDIO_X5_PAD,IRIVER_H10_PAD}
+      {\ButtonPlay}
     \opt{SANSA_E200_PAD,SANSA_C200_PAD}{Long \ButtonSelect}
-    \opt{GIGABEAT_PAD,MROBE100_PAD}{\ButtonMenu}
+    \opt{GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonMenu}
     & Calculate\\
     %
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
-    \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
+    \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
+      ,MROBE100_PAD}{\ButtonPower}
+    \opt{GIGABEAT_S_PAD}{\ButtonBack}
     & Quit\\
 \end{btnmap}
 \end{table}
