--- a/manual/plugins/chess_clock.tex
+++ b/manual/plugins/chess_clock.tex
@@ -8,8 +8,9 @@ used in any kind of game with up to ten players.
 \begin{table}
   \begin{btnmap}{}{}
     \opt{PLAYER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,IRIVER_H10_PAD%
-        ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonRight{} / \ButtonLeft}
-    \opt{RECORDER_PAD,ONDIO_PAD}{\ButtonUp{} / \ButtonDown}
+        ,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRight{} / \ButtonLeft}
+    \opt{RECORDER_PAD,ONDIO_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
+        {\ButtonUp{} / \ButtonDown}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonScrollBack{} / \ButtonScrollFwd}
       & Increase / decrease displayed Value\\
     %
@@ -17,7 +18,7 @@ used in any kind of game with up to ten players.
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
     \opt{ONDIO_PAD}{\ButtonRight}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD%
-        ,GIGABEAT_PAD,MROBE100_PAD}{\ButtonSelect}
+        ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonSelect}
       & Move to next screen\\
     %
     \opt{PLAYER_PAD}{\ButtonStop}
@@ -25,6 +26,7 @@ used in any kind of game with up to ten players.
     \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
     \opt{IAUDIO_X5_PAD}{\ButtonRec}
     \opt{IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
+    \opt{GIGABEAT_S_PAD}{\ButtonBack}
       & Move to previous screen\\
   \end{btnmap}
 \end{table}
@@ -53,18 +55,21 @@ Keys are as follows:
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonPlay}
     \opt{IAUDIO_X5_PAD}{\ButtonRec}
     \opt{IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
+    \opt{GIGABEAT_S_PAD}{\ButtonBack}
       & Exit plugin \\
     %
     \opt{PLAYER_PAD}{\ButtonStop}
     \opt{RECORDER_PAD,ONDIO_PAD,IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonLeft}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
-    \opt{IAUDIO_X5_PAD,GIGABEAT_PAD}{\ButtonPower}
+    \opt{IAUDIO_X5_PAD}{\ButtonPower}
     \opt{IRIVER_H10_PAD}{\ButtonFF}
     \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonDown}
+    \opt{GIGABEAT_PAD}{\ButtonA}
+    \opt{GIGABEAT_S_PAD}{\ButtonPrev}
     \opt{MROBE100_PAD}{\ButtonDisplay}
       & Restart round for the current player \\
     %
-    \opt{PLAYER_PAD,RECORDER_PAD,IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay}
+    \opt{PLAYER_PAD,RECORDER_PAD,IAUDIO_X5_PAD,IRIVER_H10_PAD,GIGABEAT_S_PAD}{\ButtonPlay}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
     \opt{ONDIO_PAD}{\ButtonRight}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
@@ -73,17 +78,18 @@ Keys are as follows:
     %
     \opt{PLAYER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,IRIVER_H10_PAD%
         ,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRight}
-    \opt{RECORDER_PAD,ONDIO_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonUp}
+    \opt{RECORDER_PAD,ONDIO_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonUp}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonScrollBack}
       & Switch to next player \\
     %
     \opt{PLAYER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,IRIVER_H10_PAD%
         ,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonLeft}
-    \opt{RECORDER_PAD,ONDIO_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonDown}
+    \opt{RECORDER_PAD,ONDIO_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonDown}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonScrollFwd}
       & Switch to previous player \\
     %
-    \opt{PLAYER_PAD,ONDIO_PAD,IPOD_4G_PAD,IPOD_3G_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonMenu}
+    \opt{PLAYER_PAD,ONDIO_PAD,IPOD_4G_PAD,IPOD_3G_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD%
+         ,MROBE100_PAD}{\ButtonMenu}
     \opt{RECORDER_PAD}{\ButtonFOne}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonRec}
     \opt{IAUDIO_X5_PAD}{\ButtonSelect}
@@ -94,7 +100,7 @@ Keys are as follows:
         \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{(\ButtonOn\ to select.)}%
         \opt{ONDIO_PAD}{(\ButtonRight\ to select.)}%
         \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
-            ,MROBE100_PAD}{(\ButtonSelect\ to select.)}%
+            ,GIGABEAT_S_PAD,MROBE100_PAD}{(\ButtonSelect\ to select.)}%
         \opt{IAUDIO_X5_PAD}{(press again to select.)}\\
   \end{btnmap}
 \end{table}
