--- a/manual/plugins/chip8emulator.tex
+++ b/manual/plugins/chip8emulator.tex
@@ -40,6 +40,7 @@ The default keymappings are:
         \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
         \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
         \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
+        \opt{GIGABEAT_S_PAD}{\ButtonBack}
         \end{sideways}
         &
         % Key "0"
@@ -48,14 +49,15 @@ The default keymappings are:
         \begin{sideways}
         \opt{RECORDER_PAD}{\ButtonFOne}
         \opt{ONDIO_PAD}{\ButtonUp}
-        \opt{GIGABEAT_PAD,MROBE100_PAD}{\ButtonMenu}
+        \opt{GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonMenu}
         \end{sideways}
         &
         % Key "2"
         \begin{sideways}
         \opt{RECORDER_PAD,ONDIO_PAD}{\ButtonUp}
         \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{\ButtonScrollBack}
-        \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonUp}
+        \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,GIGABEAT_PAD%
+          ,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonUp}
         \opt{IRIVER_H10_PAD}{\ButtonScrollUp}
         \opt{SANSA_C200_PAD}{\ButtonVolUp}
         \end{sideways}
@@ -64,12 +66,14 @@ The default keymappings are:
         \begin{sideways}
         \opt{RECORDER_PAD}{\ButtonFThree}
         \opt{MROBE100_PAD}{\ButtonPlay}
-        \opt{GIGABEAT_PAD}{\ButtonVolDown}
+        \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolDown}
         \end{sideways}
+        &
         % Key "4"
         \begin{sideways}
         \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD%
-            ,IPOD_3G_PAD,IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonLeft}
+            ,IPOD_3G_PAD,IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD%
+            ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonLeft}
         \end{sideways}
         &
         % Key "5"
@@ -77,26 +81,28 @@ The default keymappings are:
         \opt{RECORDER_PAD}{\ButtonPlay}
         \opt{ONDIO_PAD}{\ButtonMenu}
         \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD%
-            ,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonSelect}
+            ,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonSelect}
         \opt{IPOD_4G_PAD,IPOD_3G_PAD,IRIVER_H10_PAD}{\ButtonPlay}
         \end{sideways}
         &
         % Key "6"
         \begin{sideways}
         \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD%
-            ,IPOD_3G_PAD,IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonRight}
+            ,IPOD_3G_PAD,IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD%
+            ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonRight}
         \end{sideways}
         &
         % Key "7"
         \begin{sideways}
         \opt{RECORDER_PAD}{\ButtonFTwo}
         \opt{MROBE100_PAD}{\ButtonDisplay}
-        \opt{GIGABEAT_PAD}{\ButtonVolUp}
+        \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolUp}
         \end{sideways}
         &
         % Key "8"
         \begin{sideways}
-        \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonDown}
+        \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD%
+            ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonDown}
         \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{\ButtonScrollFwd}
         \opt{IAUDIO_X5_PAD}{\ButtonDown}
         \opt{IRIVER_H10_PAD}{\ButtonScrollDown}
@@ -106,6 +112,8 @@ The default keymappings are:
         % Key "9"
         \begin{sideways}
         \opt{RECORDER_PAD}{\ButtonOn}
+        \opt{GIGABEAT_PAD}{\ButtonA}
+        \opt{GIGABEAT_S_PAD}{\ButtonPlay}
         \end{sideways}
         &
         % Key "A"
@@ -119,7 +127,6 @@ The default keymappings are:
         % Key "E"
         &
         % Key "F"
-        &
     \\\bottomrule
     \end{tabularx}
     \end{center}
