--- a/manual/plugins/clock.tex
+++ b/manual/plugins/clock.tex
@@ -9,34 +9,37 @@ This is a fully featured analogue and digital clock plugin.
 \begin{btnmap}{}{}
     \ButtonLeft{} / \ButtonRight
     & Cycle through modes \\
-    \opt{RECORDER_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,GIGABEAT_PAD%
+    \opt{RECORDER_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD%
         ,MROBE100_PAD}{\ButtonUp{} / \ButtonDown}
-    \opt{IPOD_3G_PAD,IPOD_4G_PAD,SANSA_E200_PAD}{\ButtonScrollFwd{} / \ButtonScrollBack}
+    \opt{IPOD_3G_PAD,IPOD_4G_PAD,SANSA_E200_PAD}
+      {\ButtonScrollFwd{} / \ButtonScrollBack}
     \opt{SANSA_C200_PAD}{\ButtonVolUp{} / \ButtonVolDown}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp{} / \ButtonScrollDown}
     & Cycle through skins \\
     \opt{RECORDER_PAD}{\ButtonFOne}
     \opt{IAUDIO_X5_PAD}{\ButtonRec}
     \opt{IRIVER_H300_PAD}{\ButtonMode}
-    \opt{IPOD_4G_PAD,IPOD_3G_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonMenu}
+    \opt{IPOD_4G_PAD,IPOD_3G_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
+      {\ButtonMenu}
     \opt{SANSA_C200_PAD,SANSA_E200_PAD}{\ButtonDown}
     \opt{IRIVER_H10_PAD}{\ButtonFF}
     & Main Menu \\
     \opt{RECORDER_PAD}{\ButtonPlay}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
     \opt{IRIVER_H300_PAD,IAUDIO_X5_PAD,IPOD_4G_PAD,IPOD_3G_PAD,SANSA_C200_PAD%
-        ,SANSA_E200_PAD,MROBE100_PAD,GIGABEAT_PAD}{\ButtonSelect}
+      ,SANSA_E200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonSelect}
     & Start / Stop Counter \\
     Long
     \opt{RECORDER_PAD_PAD}{\ButtonPlay}%
     \opt{IRIVER_H10_PAD}{\ButtonRew}%
     \opt{IRIVER_H300_PAD,IAUDIO_X5_PAD,IPOD_4G_PAD,IPOD_3G_PAD,SANSA_C200_PAD%
-        ,SANSA_E200_PAD,MROBE100_PAD,GIGABEAT_PAD}{\ButtonSelect}
+      ,SANSA_E200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonSelect}
     & Reset Counter \\
     \opt{RECORDER_PAD,IRIVER_H300_PAD}{\ButtonOff}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu + \ButtonSelect}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
         ,MROBE100_PAD}{\ButtonPower}
+    \opt{GIGABEAT_S_PAD}{\ButtonBack}
     & Save Settings (if enabled) and Exit \\
 \end{btnmap}
 \end{table}
@@ -45,7 +48,8 @@ This is a fully featured analogue and digital clock plugin.
 \begin{description}
 \item[View Clock] Exits the menu and returns to the current clock mode display.
 \item[Mode Selector] Opens a menu from which you can select a clock mode to view.
-\item[Counter Settings] Opens a menu from which you can adjust settings pertaining to the counter.
+\item[Counter Settings] Opens a menu from which you can adjust settings
+    pertaining to the counter.
 \item[Mode Settings] Opens a menu from which you can adjust settings pertaining to
     the current clock mode (analog, digital, binary).
 \item[General Settings]
@@ -57,9 +61,11 @@ This is a fully featured analogue and digital clock plugin.
     \item[Show Counter]
     Toggle Counter display.
     \item[Save]
-    Choose whether to disable automatic saving, saving to disk on exit, or saving to disk every settings change.
+    Choose whether to disable automatic saving, saving to disk on exit, or 
+    saving to disk every settings change.
     \item[Backlight]
-    Choose whether to disable the backlight, use the user's timeout setting, or keep the backlight on.
+    Choose whether to disable the backlight, use the user's timeout setting,
+    or keep the backlight on.
     \item[Idle Poweroff]
     Toggle Idle Poweroff.
     \note{This setting is not saved to disk.}
@@ -71,35 +77,43 @@ This is a fully featured analogue and digital clock plugin.
 \subsubsection{Analog mode}
 Small, round, analog clock is displayed in the middle of the LCD.
 Time readout, if enabled, is displayed at the upper left.
-If Time readout is in 12-hour (``12h'') mode, AM or PM will be displayed at the upper right.
-The Date readout, if enabled, is displayed at the lower left.
+If Time readout is in 12-hour (``12h'') mode, AM or PM will be displayed at the
+upper right.  The Date readout, if enabled, is displayed at the lower left.
 The Counter, if enabled, is displayed at the lower right.
 The second hand, if enabled, is displayed along with the hour and minute hands.
-Digit display, if enabled, places ``12'', ``3'', ``6'', and ``9'' around the face of the clock in their respective positions. 
+Digit display, if enabled, places ``12'', ``3'', ``6'', and ``9'' around the
+face of the clock in their respective positions. 
 
 \subsubsection{Digital mode}
 An imitation of an LCD, this mode shows a Clock comprised of digital ``segments''.
 The Date readout, if enabled, is displayed at the bottom, center.
-The Second readout, if in ``Text'' mode, is displayed at the top, center; if in ``Bar'' mode, is displayed as a progress bar at the top of the LCD; if in ``Invert'' mode, will invert the LCD left-to-right as the seconds pass (a fully-inverted LCD means the entire minute has passed).
+The Second readout, if in ``Text'' mode, is displayed at the top, center; if in
+``Bar'' mode, is displayed as a progress bar at the top of the LCD; if in
+``Invert'' mode, will invert the LCD left-to-right as the seconds pass (a
+fully-inverted LCD means the entire minute has passed).
 The Counter, if displayed, is shown at the upper left.
 The Blinking Colon, if enabled, blinks the colon once every second.
 12-hour mode, if enabled, will display the time in a 12-hour format.
 
 \subsubsection{LCD mode}
 Based on the Digital Mode, the LCD mode is another imitation of an LCD.
-The settings available in this mode are exactly the same as Digital Mode, but they are independent of Digital Mode.
-For example, you can have the Date Readout enabled in Digital Mode and disabled in LCD Mode.
+The settings available in this mode are exactly the same as Digital Mode, but
+they are independent of Digital Mode. For example, you can have the Date
+Readout enabled in Digital Mode and disabled in LCD Mode.
 
 \subsubsection{Fullscreen}
-A Fullscreen clock is displayed. Show Border, if enabled, will draw a small box at every hour position (1 through 12).
+A Fullscreen clock is displayed. Show Border, if enabled, will draw a small
+box at every hour position (1 to 12 inclusive).
 Invert Seconds, if enabled, will invert the LCD as the seconds pass.
 Second Hand, if enabled, will draw a second hand among the hour and minute hands.
 
 \subsubsection{Binary mode}
 This mode shows a Binary clock.
-The hour is displayed on the top line, the minute is displayed on the middle line, and the seconds are on the last line.
+The hour is displayed on the top line, the minute is displayed on the middle
+line, and the seconds are on the last line.
 Circle mode, if enabled, draws empty and full circles, instead of zeros and ones.
-For help on reading binary, please visit: \url{http://en.wikipedia.org/wiki/Binary_numeral_system}
+For help on reading binary, please visit:
+\url{http://en.wikipedia.org/wiki/Binary_numeral_system}
 
 \subsubsection{Plain mode}
 This mode shows a ``plain'' clock in large text that takes up nearly the whole LCD.
