--- a/manual/plugins/doom.tex
+++ b/manual/plugins/doom.tex
@@ -52,10 +52,10 @@ Rockdoom options, you will need to quit your current game and restart the plugin
   \emph{Statusbar Always Red.} Disable color response statusbar%\\
 
   \item[InGame Main Menu. ]This menu can only be accessed from within a running game, and is displayed by
-    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{pressing \ButtonOff}
-    \opt{IPOD_3G_PAD,IPOD_4G_PAD}{flipping your \ButtonHold{} switch a couple of times}
+    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{pressing \ButtonOff}%
+    \opt{IPOD_3G_PAD,IPOD_4G_PAD}{flipping your \ButtonHold{} switch a couple of times}%
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD, SANSA_C200_PAD%
-         ,GIGABEAT_PAD}{pressing \ButtonPower}
+         ,GIGABEAT_PAD,GIGABEAT_S_PAD}{pressing \ButtonPower}%
 
   \emph{New Game. } Start a new game\\
   \emph{Options. } In game options\\
@@ -78,13 +78,13 @@ Rockdoom options, you will need to quit your current game and restart the plugin
 \begin{table}
 \begin{btnmap}{}{}
   \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD%
-      ,GIGABEAT_PAD,MROBE100_PAD}{\ButtonUp}
+      ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonUp}
   \opt{IPOD_3G_PAD,IPOD_4G_PAD}{\ButtonMenu}
   \opt{IRIVER_H10_PAD}{\ButtonScrollUp}
     & Move Forward \\
 %
   \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD%
-      ,GIGABEAT_PAD,MROBE100_PAD}{\ButtonDown & Down\\}
+      ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonDown & Down\\}
   \opt{IRIVER_H10_PAD}{\ButtonScrollDown & Down\\}
 %
   \ButtonLeft
@@ -94,7 +94,7 @@ Rockdoom options, you will need to quit your current game and restart the plugin
     & Turn Right \\
 %
   \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonRec}
-  \opt{IPOD_3G_PAD,IPOD_4G_PAD}{\ButtonPlay}
+  \opt{IPOD_3G_PAD,IPOD_4G_PAD,GIGABEAT_S_PAD}{\ButtonPlay}
   \opt{IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonSelect}
   \opt{IRIVER_H10_PAD}{\ButtonRew}
   \opt{GIGABEAT_PAD}{\ButtonA}
@@ -105,17 +105,17 @@ Rockdoom options, you will need to quit your current game and restart the plugin
   \opt{IPOD_3G_PAD,IPOD_4G_PAD}{\ButtonMenu}
   \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay}
   \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec}
-  \opt{GIGABEAT_PAD,MROBE100_PAD}{\ButtonMenu}
+  \opt{GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonMenu}
     & Open \\
 %
   \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
   \opt{IPOD_3G_PAD,IPOD_4G_PAD}{\ButtonHold{} switch}
   \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
-      ,MROBE100_PAD}{\ButtonPower}
+      ,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonPower}
     & InGame Menu \\
 %
   \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_3G_PAD,IPOD_4G_PAD,IAUDIO_X5_PAD%
-      ,GIGABEAT_PAD,SANSA_E200_PAD,SANSA_C200_PAD,MROBE100_PAD}{\ButtonSelect}
+      ,GIGABEAT_PAD,GIGABEAT_S_PAD,SANSA_E200_PAD,SANSA_C200_PAD,MROBE100_PAD}{\ButtonSelect}
   \opt{IRIVER_H10_PAD}{\ButtonRew}
     & Enter \\
 %
@@ -125,7 +125,7 @@ Rockdoom options, you will need to quit your current game and restart the plugin
   \opt{IRIVER_H10_PAD}{\ButtonFF}
   \opt{SANSA_E200_PAD}{\ButtonScrollFwd}
   \opt{SANSA_C200_PAD}{\ButtonVolUp}
-  \opt{GIGABEAT_PAD}{\ButtonVolDown}
+  \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolDown}
     & Change Weapon \\
 %
 \end{btnmap}
