--- a/manual/plugins/mandelbrot.tex
+++ b/manual/plugins/mandelbrot.tex
@@ -11,7 +11,7 @@ This demonstration draws fractal images from the Mandelbrot set
     \opt{ONDIO_PAD}{\ButtonMenu\ / \ButtonMenu+\ButtonUp}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonSelect}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{\ButtonScrollFwd}
-    \opt{SANSA_C200_PAD}{\ButtonVolUp}
+    \opt{SANSA_C200_PAD,GIGABEAT_S_PAD}{\ButtonVolUp}
     & Zoom in\\
     %
     \opt{RECORDER_PAD}{\ButtonOn}
@@ -20,7 +20,7 @@ This demonstration draws fractal images from the Mandelbrot set
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD}{\ButtonScrollBack}
     \opt{IAUDIO_X5_PAD,GIGABEAT_PAD,MROBE100_PAD}{Long \ButtonSelect}
     \opt{IRIVER_H10_PAD}{Long \ButtonPlay}
-    \opt{SANSA_C200_PAD}{\ButtonVolDown}
+    \opt{SANSA_C200_PAD,GIGABEAT_S_PAD}{\ButtonVolDown}
     & Zoom out\\
     %
     \opt{RECORDER_PAD}{\ButtonFOne}
@@ -30,7 +30,8 @@ This demonstration draws fractal images from the Mandelbrot set
     \opt{IAUDIO_X5_PAD}{Long \ButtonPlay}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
     \opt{GIGABEAT_PAD}{\ButtonVolDown}
-    \opt{MROBE100_PAD}{\ButtonMenu}
+    \opt{GIGABEAT_S_PAD}{\ButtonNext}
+    \opt{MROBE100_PAD}{\ButtonPlay}
     & Decrease iteration depth (less detail)\\
     %
     \opt{RECORDER_PAD}{\ButtonFTwo}
@@ -40,7 +41,8 @@ This demonstration draws fractal images from the Mandelbrot set
     \opt{IAUDIO_X5_PAD}{\ButtonPlay}
     \opt{IRIVER_H10_PAD}{\ButtonFF}
     \opt{GIGABEAT_PAD}{\ButtonVolUp}
-    \opt{MROBE100_PAD}{\ButtonPlay}
+    \opt{GIGABEAT_S_PAD}{\ButtonPrev}
+    \opt{MROBE100_PAD}{\ButtonMenu}
     & Increase iteration depth (more detail)\\
     %
     \opt{RECORDER_PAD}{\ButtonFThree}
@@ -49,12 +51,14 @@ This demonstration draws fractal images from the Mandelbrot set
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonPlay}
     \opt{IRIVER_H10_PAD}{\ButtonPlay + \ButtonRew}
     \opt{GIGABEAT_PAD}{\ButtonA}
+    \opt{GIGABEAT_S_PAD}{\ButtonMenu}
     \opt{MROBE100_PAD}{\ButtonDisplay}
     & Reset and return to the default image\\
     %
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
+    \opt{GIGABEAT_S_PAD}{\ButtonBack}
     & Quit\\
   \end{btnmap}
 \end{table}
