--- a/manual/plugins/mazezam.tex
+++ b/manual/plugins/mazezam.tex
@@ -16,7 +16,8 @@ Luckily, there are checkpoints at levels four and eight.
 \begin{btnmap}{}{}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu, \ButtonPlay,}
     \opt{SANSA_E200_PAD}{\ButtonScrollFwd, \ButtonScrollBack,}
-    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_C200_PAD,RECORDER_PAD,ONDIO_PAD,GIGABEAT_PAD,MROBE100_PAD}
+    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_C200_PAD,RECORDER_PAD%
+        ,ONDIO_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
         {\ButtonUp, \ButtonDown,}%
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp, \ButtonScrollDown,}
     \ButtonLeft, \ButtonRight
@@ -24,6 +25,7 @@ Luckily, there are checkpoints at levels four and eight.
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,RECORDER_PAD,ONDIO_PAD}{\ButtonOff}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
+    \opt{GIGABEAT_S_PAD}{\ButtonBack}
     & Menu\\
 \end{btnmap}
 \end{table}
