--- a/manual/plugins/mosaic.tex
+++ b/manual/plugins/mosaic.tex
@@ -8,8 +8,10 @@
 \screenshot{plugins/images/ss-mosaic}{Mosaique}{img:mosaique}
 This simple graphics demo draws a mosaic picture on the screen of the \dap.
 Press
-\opt{PLAYER_PAD}{\ButtonStop}
-\opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
-\opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
-\opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
+\opt{PLAYER_PAD}{\ButtonStop}%
+\opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}%
+\opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}%
+\opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
+  ,MROBE100_PAD}{\ButtonPower}%
+\opt{GIGABEAT_S_PAD}{\ButtonBack} %
 to quit.
