--- a/manual/plugins/mpegplayer.tex
+++ b/manual/plugins/mpegplayer.tex
@@ -10,11 +10,20 @@ option and choose \setting{mpegplayer}.
 
 \begin{table}
 \begin{btnmap}{}{}
-    \ActionWpsPlay & Pause/Resume\\
+    \opt{GIGABEAT_S_PAD}{\ButtonSelect{} or \ButtonPlay}
+    \opt{GIGABEAT_PAD}{\ButtonSelect{} or \ButtonA}
+    \nopt{GIGABEAT_S_PAD,GIGABEAT_PAD}{\ActionWpsPlay}
+    & Pause / Resume\\
     \ActionWpsStop & Stop\\
-    \ActionWpsVolUp{} / \ActionWpsVolDown & Adjust volume up / down\\
+    \nopt{GIGABEAT_S_PAD,GIGABEAT_PAD}{\ActionWpsVolUp{} / \ActionWpsVolDown}
+    \opt{GIGABEAT_S_PAD,GIGABEAT_PAD}{\ButtonLeft{} or  \ButtonVolDown{} / 
+        \ButtonRight{} or \ButtonVolUp}
+    & Adjust volume up / down\\
+    \nopt{GIGABEAT_S_PAD,GIGABEAT_PAD}{\ActionWpsSkipPrev{} / \ActionWpsSkipNext}
+    \opt{GIGABEAT_S_PAD,GIGABEAT_PAD}{\ButtonUp{} / \ButtonDown}
+    & Rewind / Fast Forward\\ 
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
-    \opt{IPOD_4G_PAD,IPOD_3G_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonMenu}
+    \opt{IPOD_4G_PAD,IPOD_3G_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonMenu}
     \opt{IAUDIO_X5_PAD}{\ButtonRec}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
     \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonSelect}
