--- a/manual/plugins/pacbox.tex
+++ b/manual/plugins/pacbox.tex
@@ -30,22 +30,22 @@ found at \url{http://www.mame.net}.
 \begin{table}
   \begin{btnmap}{}{}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,IPOD_4G_PAD,IPOD_3G_PAD,h10,SANSA_E200_PAD,MROBE100_PAD}{\ButtonRight}
-    \opt{GIGABEAT_PAD}{\ButtonUp}
+    \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonUp}
     \opt{h10_5gb}{\ButtonScrollUp}
     & Move Up\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,IPOD_4G_PAD,IPOD_3G_PAD,h10,SANSA_E200_PAD,MROBE100_PAD}{\ButtonLeft}
     \opt{h10_5gb}{\ButtonScrollDown}
-    \opt{GIGABEAT_PAD}{\ButtonDown}
+    \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonDown}
     & Move Down\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,MROBE100_PAD}{\ButtonUp}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
     \opt{h10}{\ButtonScrollUp}
-    \opt{h10_5gb,GIGABEAT_PAD}{\ButtonLeft}
+    \opt{h10_5gb,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonLeft}
     & Move Left\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,MROBE100_PAD}{\ButtonDown}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonPlay}
     \opt{h10}{\ButtonScrollDown}
-    \opt{h10_5gb,GIGABEAT_PAD}{\ButtonRight}
+    \opt{h10_5gb,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonRight}
     & Move Right\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD}{\ButtonRec}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect}
@@ -53,13 +53,15 @@ found at \url{http://www.mame.net}.
     \opt{SANSA_E200_PAD}{\ButtonSelect+\ButtonDown}
     \opt{GIGABEAT_PAD}{\ButtonA}
     \opt{MROBE100_PAD}{\ButtonDisplay}
+    \opt{GIGABEAT_S_PAD}{\ButtonPlay}
     & Insert Coin\\
-    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD,GIGABEAT_PAD}{\ButtonSelect}
+    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,IPOD_4G_PAD,IPOD_3G_PAD%
+        ,SANSA_E200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonSelect}
     \opt{IRIVER_H10_PAD}{\ButtonRew} 
     & 1-Player Start\\
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{n/a}
-    \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,GIGABEAT_PAD}{\ButtonPower}
+    \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonPower}
     \opt{SANSA_E200_PAD}{\ButtonRec}
     \opt{MROBE100_PAD}{\ButtonMenu}
     & 2-Player Start\\
@@ -67,7 +69,7 @@ found at \url{http://www.mame.net}.
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,MROBE100_PAD}{\ButtonPlay}
     \opt{SANSA_E200_PAD}{\ButtonPower}
-    \opt{GIGABEAT_PAD}{\ButtonMenu}
+    \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonMenu}
     & Menu\\
   \end{btnmap}
 \end{table}
