--- a/manual/plugins/pong.tex
+++ b/manual/plugins/pong.tex
@@ -6,7 +6,8 @@ Pong is a simple two player ``tennis game''. Whenever a player misses the ball t
     \begin{btnmap}{}{}
     \opt{RECORDER_PAD}{\ButtonFOne}
     \opt{ONDIO_PAD,SANSA_E200_PAD}{\ButtonLeft}
-    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,GIGABEAT_PAD}{\ButtonUp}
+    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,GIGABEAT_PAD%
+      ,GIGABEAT_S_PAD}{\ButtonUp}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu} 
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp}
     \opt{SANSA_C200_PAD}{\ButtonVolUp}
@@ -14,7 +15,8 @@ Pong is a simple two player ``tennis game''. Whenever a player misses the ball t
     & Left player up\\
     \opt{RECORDER_PAD,IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonLeft}
     \opt{ONDIO_PAD}{\ButtonMenu}
-    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,GIGABEAT_PAD}{\ButtonDown}
+    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD%
+      ,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonDown}
     \opt{IRIVER_H10_PAD}{\ButtonScrollDown}
     \opt{SANSA_C200_PAD}{\ButtonVolDown}
     \opt{MROBE100_PAD}{\ButtonLeft}
@@ -25,7 +27,7 @@ Pong is a simple two player ``tennis game''. Whenever a player misses the ball t
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonRight}
     \opt{IAUDIO_X5_PAD}{\ButtonRec}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
-    \opt{GIGABEAT_PAD}{\ButtonVolUp}
+    \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolUp}
     \opt{MROBE100_PAD}{\ButtonPlay}    
     & Right player up\\
     \opt{RECORDER_PAD,SANSA_E200_PAD}{\ButtonRight}
@@ -33,12 +35,14 @@ Pong is a simple two player ``tennis game''. Whenever a player misses the ball t
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,IAUDIO_X5_PAD}{\ButtonPlay} 
     \opt{IRIVER_H10_PAD}{\ButtonFF}
-    \opt{GIGABEAT_PAD}{\ButtonVolDown}
+    \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolDown}
     \opt{MROBE100_PAD}{\ButtonRight}    
     & Right player down\\
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect}
-    \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
+    \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD%
+      ,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
+    \opt{GIGABEAT_S_PAD}{\ButtonBack}
     & Quit\\
     \end{btnmap}
 \end{table}
