--- a/manual/plugins/rockblox.tex
+++ b/manual/plugins/rockblox.tex
@@ -12,7 +12,7 @@ making the blocks fall faster. If the pile of blocks reaches the ceiling, the ga
     \opt{PLAYER_PAD}{\ButtonStop+\ButtonMenu}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonPlay}
-    \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay}
+    \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,GIGABEAT_S_PAD}{\ButtonPlay}
     \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec}
     \opt{GIGABEAT_PAD}{\ButtonA}
     \opt{MROBE100_PAD}{\ButtonDisplay}
@@ -23,7 +23,8 @@ making the blocks fall faster. If the pile of blocks reaches the ceiling, the ga
     \ButtonRight
         & Move right\\
     \opt{PLAYER_PAD}{\ButtonMenu}
-    \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}
+    \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
+        ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
         {\ButtonDown}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonPlay}
     \opt{IRIVER_H10_PAD}{\ButtonScrollDown}
@@ -36,7 +37,7 @@ making the blocks fall faster. If the pile of blocks reaches the ceiling, the ga
     \opt{IAUDIO_X5_PAD}{\ButtonPower}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
     \opt{SANSA_C200_PAD}{\ButtonVolDown}
-    \opt{GIGABEAT_PAD}{\ButtonVolUp}
+    \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolUp}
     \opt{MROBE100_PAD}{\ButtonMenu}
         & Rotate left\\
     \opt{PLAYER_PAD}{\ButtonPlay}
@@ -46,13 +47,14 @@ making the blocks fall faster. If the pile of blocks reaches the ceiling, the ga
     \opt{SANSA_E200_PAD}{\ButtonScrollBack}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp}
     \opt{SANSA_C200_PAD}{\ButtonVolUp/\ButtonUp}
-    \opt{GIGABEAT_PAD}{\ButtonVolDown}
+    \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolDown}
     \opt{MROBE100_PAD}{\ButtonPlay}
         & Rotate right\\
     \opt{PLAYER_PAD,RECORDER_PAD}{\ButtonOn}
     \opt{ONDIO_PAD}{\ButtonMenu}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
-    \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonSelect}
+    \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
+        ,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonSelect}
     \opt{IAUDIO_X5_PAD}{\ButtonRec}
     \opt{IRIVER_H10_PAD}{\ButtonFF}
         & Drop\\
@@ -64,6 +66,7 @@ making the blocks fall faster. If the pile of blocks reaches the ceiling, the ga
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu+\ButtonSelect}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
+    \opt{GIGABEAT_S_PAD}{\ButtonBack}
         & Quit\\
     \end{btnmap}
 \end{table}
