--- a/manual/plugins/snow.tex
+++ b/manual/plugins/snow.tex
@@ -7,4 +7,5 @@ you will love this demo.  Or maybe not.
 \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRVER_H300_PAD}{Press \ButtonOff\ to quit.}%
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{Press \ButtonMenu\ to quit.}%
 \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}%
-    {Press \ButtonPower\ to quit.}
+    {Press \ButtonPower\ to quit.}%
+\opt{GIGABEAT_S_PAD}{Press \ButtonBack\ to quit.}
