--- a/manual/plugins/stopwatch.tex
+++ b/manual/plugins/stopwatch.tex
@@ -10,9 +10,10 @@ A simple stopwatch program with support for saving times.
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
         ,MROBE100_PAD}{\ButtonPower}
+    \opt{GIGABEAT_S_PAD}{\ButtonBack}
     & Quit Plugin \\
     %
-    \opt{PLAYER_PAD,RECORDER_PAD,IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay}
+    \opt{PLAYER_PAD,RECORDER_PAD,IAUDIO_X5_PAD,IRIVER_H10_PAD,GIGABEAT_S_PAD}{\ButtonPlay}
     \opt{ONDIO_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRight}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,GIGABEAT_PAD,MROBE100_PAD,IPOD_4G_PAD%
         ,IPOD_3G_PAD}{\ButtonSelect}
@@ -25,6 +26,7 @@ A simple stopwatch program with support for saving times.
     \opt{IRIVER_H10_PAD}{\ButtonRew}
     \opt{IAUDIO_X5_PAD}{\ButtonRec}
     \opt{GIGABEAT_PAD}{\ButtonA}
+    \opt{GIGABEAT_S_PAD}{\ButtonMenu}
     \opt{MROBE100_PAD}{\ButtonDisplay}
     & Reset timer (only when timer is stopped)\\
     %
@@ -32,12 +34,12 @@ A simple stopwatch program with support for saving times.
     \opt{ONDIO_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonMenu}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonRight}
     \opt{IRIVER_H10_PAD}{\ButtonFF}
-    \opt{IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonSelect}
+    \opt{IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_S_PAD}{\ButtonSelect}
     & Take lap time \\
     %
     \opt{PLAYER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonLeft{} / \ButtonRight}
     \opt{RECORDER_PAD,ONDIO_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD%
-        ,GIGABEAT_PAD,MROBE100_PAD}{\ButtonUp{} / \ButtonDown}
+        ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonUp{} / \ButtonDown}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonScrollFwd{} / \ButtonScrollBack}
     \opt{IRIVER_H10_PAD}{\ButtonScrollUp{} / \ButtonScrollDown}
     & Scroll through lap times \\
