--- a/manual/plugins/wormlet.tex
+++ b/manual/plugins/wormlet.tex
@@ -74,12 +74,12 @@ Game controls:}
         \ButtonRight
         & Turn right\\
         \opt{ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD%
-            ,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonUp}
+            ,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonUp}
         \opt{IPOD_3G_PAD,IPOD_4G_PAD}{\ButtonMenu}
         \opt{IRIVER_H10_PAD}{\ButtonScrollUp}
         & Turn Up\\
         \opt{ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD%
-            ,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonDown}
+            ,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonDown}
         \opt{IPOD_3G_PAD,IPOD_4G_PAD}{\ButtonPlay}
         \opt{IRIVER_H10_PAD}{\ButtonScrollDown}
         & Turn Down\\
@@ -121,13 +121,15 @@ The game is over when all worms are dead. The longest worm wins the
 game. 
 \item [Pause the game.]
 Press
-\opt{RECORDER_PAD,IAUDIO_X5_PAD}{\ButtonPlay}
-\opt{ONDIO_PAD}{\ButtonMenu}
-\opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD,SANSA_E200_PAD}{\ButtonSelect}
+\opt{RECORDER_PAD,IAUDIO_X5_PAD}{\ButtonPlay}%
+\opt{ONDIO_PAD}{\ButtonMenu}%
+\opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD,SANSA_E200_PAD,GIGABEAT_PAD%
+  ,GIGABEAT_S_PAD}{\ButtonSelect}
 to pause the game. Press
-\opt{RECORDER_PAD,IAUDIO_X5_PAD}{\ButtonPlay}
-\opt{ONDIO_PAD}{\ButtonMenu}
-\opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD,SANSA_E200_PAD}{\ButtonSelect}
+\opt{RECORDER_PAD,IAUDIO_X5_PAD}{\ButtonPlay}%
+\opt{ONDIO_PAD}{\ButtonMenu}%
+\opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IPOD_4G_PAD,SANSA_E200_PAD,GIGABEAT_PAD%
+  ,GIGABEAT_S_PAD}{\ButtonSelect}
 again to resume the game.
 
 \item[Stop the game.]
@@ -135,25 +137,31 @@ There are two ways to stop a running game.
 
 \begin{itemize}
 \item If you want to quit Wormlet entirely simply hit
-\opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
-\opt{IPOD_4G_PAD}{\ButtonMenu+\ButtonSelect}
-\opt{IAUDIO_X5_PAD,SANSA_E200_PAD}{\ButtonPower}.
+\opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}%
+\opt{IPOD_4G_PAD}{\ButtonMenu+\ButtonSelect}%
+\opt{IAUDIO_X5_PAD,SANSA_E200_PAD,GIGABEAT_PAD}{\ButtonPower}%
+\opt{GIGABEAT_S_PAD}{\ButtonBack}.
 The game will stop immediately and you will return to the game menu. 
 \item If you want to stop the game and still see the screen hit 
-\opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
-\opt{ONDIO_PAD}{\ButtonOff+\ButtonMenu}
-\opt{IPOD_4G_PAD}{\ButtonSelect+ButtonPlay}
-\opt{IAUDIO_X5_PAD,SANSA_E200_PAD}{\ButtonRec}.
+\opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}%
+\opt{ONDIO_PAD}{\ButtonOff+\ButtonMenu}%
+\opt{IPOD_4G_PAD}{\ButtonSelect+ButtonPlay}%
+\opt{IAUDIO_X5_PAD,SANSA_E200_PAD}{\ButtonRec}%
+\opt{GIGABEAT_PAD}{\ButtonA}%
+\opt{GIGABEAT_S_PAD}{\ButtonMenu}.
 This freezes the game. If you hit
-\opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
-\opt{ONDIO_PAD}{\ButtonOff+\ButtonMenu}
-\opt{IPOD_4G_PAD}{\ButtonSelect+\ButtonPlay}
-\opt{IAUDIO_X5_PAD,SANSA_E200_PAD}{\ButtonRec}
+\opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}%
+\opt{ONDIO_PAD}{\ButtonOff+\ButtonMenu}%
+\opt{IPOD_4G_PAD}{\ButtonSelect+\ButtonPlay}%
+\opt{IAUDIO_X5_PAD,SANSA_E200_PAD}{\ButtonRec}%
+\opt{GIGABEAT_PAD}{\ButtonA}%
+\opt{GIGABEAT_S_PAD}{\ButtonMenu}
 button again a new game starts with the same configuration. To return to the
 games menu you can hit
-\opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
-\opt{IPOD_4G_PAD}{\ButtonMenu+\ButtonSelect}
-\opt{IAUDIO_X5_PAD,SANSA_E200_PAD}{\ButtonPower}. A stopped game can not be resumed. 
+\opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}%
+\opt{IPOD_4G_PAD}{\ButtonMenu+\ButtonSelect}%
+\opt{IAUDIO_X5_PAD,SANSA_E200_PAD,GIGABEAT_PAD}{\ButtonPower}%
+\opt{GIGABEAT_S_PAD}{\ButtonBack}. A stopped game can not be resumed. 
 \end{itemize}
 \end{description}
 
