Initial work on the Fuze manual
Still missing:
    - svg/pdf/nice png front image
    - plugin keymaps
    - manual install instructions for sansav2 (and mkamsboot binaries)

git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21031 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/advanced_topics/main.tex
+++ b/manual/advanced_topics/main.tex
@@ -483,6 +483,7 @@ You just ``play'' a file with the extension %
 \opt{ipod}{\fname{.ipod}.} %
 \opt{iaudio}{\fname{.iaudio}.} %
 \opt{sansa,h10,h10_5gb}{\fname{.mi4}.} %
+\opt{sansaAMS}{\fname{.sansa}.} %
 This can be used to test new firmware versions without deleting your
 current version.
 
