--- a/manual/configure_rockbox/sound_settings.tex
+++ b/manual/configure_rockbox/sound_settings.tex
@@ -11,7 +11,7 @@ change to customise your listening experience.
   can produce without possible distortion (clipping). All values lower than
   this reference will be negative and yield a progressively softer volume.
   \opt{player,recorder,recorderv2fm,ondio,x5,m5,ipodnano,ipodvideo,
-       ipodcolor,ipod1g2g,h10,h10_5gb, sansa}{
+       ipodcolor,ipod1g2g,h10,h10_5gb,sansa,sansaAMS}{
   Values higher than 0 dB are available and can be used to raise the
   volume more than would otherwise be possible. These volume levels will
   ordinarily lead to distorted sound, but might work nicely for music that has
@@ -23,7 +23,7 @@ change to customise your listening experience.
   \opt{x5,m5,ipod3g,ipod4g,gigabeatf,mrobe100}{minimum of -73 dB to a maximum of +6 dB.}%
   \opt{ipodnano}{minimum of -72 dB to a maximum of +6 dB.}%
   \opt{ipodvideo}{minimum of -57 dB to a maximum of +6 dB.}%
-  \opt{ipodcolor,ipod1g2g,h10,h10_5gb,sansa}{minimum of -74 dB to a maximum
+  \opt{ipodcolor,ipod1g2g,h10,h10_5gb,sansa,sansaAMS}{minimum of -74 dB to a maximum
   of +6 db.}%
 
 \section{Bass}
@@ -36,7 +36,7 @@ change to customise your listening experience.
   \opt{h100,h300}{The minimum setting is 0 dB and the maximum is 24 dB.}%
   \opt{ipodnano,ipodcolor}{The minimum setting is -6 dB and the maximum is 9 dB.}%
   \opt{ipodvideo}{The minimum setting is -12 dB and the maximum is 12 dB.}%
-  \opt{x5,sansa,h10,h10_5gb}{The minimum setting is -24 dB and the maximum is 24 dB.}
+  \opt{x5,sansa,sansaAMS,h10,h10_5gb}{The minimum setting is -24 dB and the maximum is 24 dB.}
 
 \opt{ipodvideo}{
 \section{Bass Cutoff}
@@ -56,7 +56,7 @@ change to customise your listening experience.
   \opt{h100,h300}{The minimum setting is 0 dB and the maximum is 6 dB.}%
   \opt{ipodnano,ipodcolor}{The minimum setting is -6 dB and the maximum is 9 dB.}%
   \opt{ipodvideo}{The minimum setting is -12 dB and the maximum is 12 dB.}%
-  \opt{x5,sansa,h10,h10_5gb}{The minimum setting is -24 dB and the maximum is 24 dB.}
+  \opt{x5,sansa,sansaAMS,h10,h10_5gb}{The minimum setting is -24 dB and the maximum is 24 dB.}
 
 \opt{ipodvideo}{
 \section{Treble Cutoff}
