--- a/manual/main_menu/main.tex
+++ b/manual/main_menu/main.tex
@@ -216,7 +216,7 @@ pages of information.}
   given seperately for internal memory (\emph{Int}) and for a plugged in
   memory card
   \opt{ondio}{(\emph{MMC})}
-  \opt{sansa}{(\emph{MSD})}.
+  \opt{sansa,e200v2,fuze}{(\emph{MSD})}.
 }%
 \nopt{multivolume}{Hard disk size and the amount of free space on the disk.}
 
