--- a/manual/appendix/file_formats.tex
+++ b/manual/appendix/file_formats.tex
@@ -28,7 +28,8 @@
   & Rockbox firmware & 
     \opt{player}{\fname{.mod}}\opt{recorder,recorderv2fm,ondiofm,ondiosp}{\fname{.ajz}}%
     \opt{h100,h300}{\fname{.iriver}}\opt{ipod}{\fname{.ipod}}\opt{iaudio}{\fname{.iaudio}}%
-    \opt{h10,h10_5gb,sansa}{\fname{.mi4}}\opt{gigabeat}{\fname{.gigabeat}}
+    \opt{h10,h10_5gb,sansa}{\fname{.mi4}}\opt{gigabeat}{\fname{.gigabeat}}%
+    \opt{sansaAMS}{\fname{.sansa}}
   & Load the new firmware with ROLO \\
 \includegraphics[width=0.37cm]{appendix/images/icon-wps.png} 
   & While Playing Screen & \fname{.wps} & Load the new WPS display configuration \\
