--- a/manual/rockbox_interface/main.tex
+++ b/manual/rockbox_interface/main.tex
@@ -428,7 +428,7 @@ To turn on and off your Rockbox enabled \dap{} use the following keys:
       \opt{IPOD_3G_PAD}{\ButtonMenu{} / \ButtonPlay}%
       \opt{ONDIO_PAD}{\ButtonOff}\opt{RECORDER_PAD,PLAYER_PAD}%
           {Long \ButtonOn}%
-      \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD,GIGABEAT_S_PAD}
+      \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD,GIGABEAT_S_PAD,sansaAMS}
           {\ButtonPower}%
       & Start Rockbox\\
       \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{Long \ButtonOff}%
@@ -436,7 +436,7 @@ To turn on and off your Rockbox enabled \dap{} use the following keys:
       \opt{ONDIO_PAD,recorderv2fm}{Long \ButtonOff}%
       \opt{recorder}{Double tap \ButtonOff\ when playback is stopped}%
       \opt{PLAYER_PAD}{From the Main Menu, select \textbf{Shutdown}}%
-      \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD,GIGABEAT_S_PAD}%
+      \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD,GIGABEAT_S_PAD,sansaAMS}%
           {Long \ButtonPower}%
       & Shutdown Rockbox\\
     \end{btnmap}
@@ -519,10 +519,17 @@ To turn on and off your Rockbox enabled \dap{} use the following keys:
     pin in the reset hole}\opt{h10_5gb}{removing and reinserting the battery}.}
     }
     
-  \opt{sansa}
+  \opt{sansa,sansaAMS}
     {
     Rockbox has a dual-boot feature. To boot into the original firmware,
     press and hold the \ButtonLeft{} button while turning on the player.
+    }
+
+  \opt{sansaAMS}
+    {
+    The player will boot into the original firmware if it is powered
+    by a USB connection. That feature might go away in the future if
+    Rockbox can handle USB transfers.
     }
 
   \opt{mrobe100}
