FS#10230 - And the change to the manual
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21035 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/main_menu/recording_screen.tex
+++ b/manual/main_menu/recording_screen.tex
@@ -43,8 +43,7 @@ The controls for this screen are:
     %
     \opt{IRIVER_H10_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,%
          SANSA_E200_PAD,IPOD_4G_PAD,SANSA_C200_PAD}{
-      \ActionRecNewfile & Starts recording.\\
-                        & While recording: close the current file and open
+      \ActionRecNewfile & While recording: close the current file and open
                           a new one.\\
     }
     %
@@ -55,7 +54,6 @@ The controls for this screen are:
       \ActionRecFTwo & Quick menu for recording settings. A quick press will
       leave the screen up (press \ActionRecFTwo{} again to exit), while holding
       it will close the screen when you release it.\\
-    }
     %
     \opt{RECORDER_PAD}{
       \ActionRecFThree & Quick menu for source setting.\\
