FS#10207 - And update the manual
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21037 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/platform/keymap-ipod4g.tex
+++ b/manual/platform/keymap-ipod4g.tex
@@ -81,9 +81,9 @@
 
 %Button actions, Recording screen context
 \newcommand{\ActionRecPause}{\ButtonPlay}
-\newcommand{\ActionRecExit}{\ButtonMenu}
+\newcommand{\ActionRecExit}{\ButtonMenu or Long \ButtonPlay}
 \newcommand{\ActionRecMenu}{Long \ButtonSelect}
-\newcommand{\ActionRecNewfile}{Long \ButtonPlay}
+\newcommand{\ActionRecNewfile}{\ButtonSelect}
 \newcommand{\ActionRecSettingsInc}{\ButtonRight}
 \newcommand{\ActionRecSettingsDec}{\ButtonLeft}
 \newcommand{\ActionRecPrev}{\ButtonScrollBack}
