FS#8627 - change 'beep volume' setting name to the more descriptive 'track skip beep'
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21038 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/english.lang
+++ b/apps/lang/english.lang
@@ -1993,15 +1993,15 @@
   user: core
   <source>
     *: none
-    swcodec: "Beep Volume"
+    swcodec: "Track Skip Beep"
   </source>
   <dest>
     *: none
-    swcodec: "Beep Volume"
+    swcodec: "Track Skip Beep"
   </dest>
   <voice>
     *: none
-    swcodec: "Beep Volume"
+    swcodec: "Track Skip Beep"
   </voice>
 </phrase>
 <phrase>
