--- a/manual/configure_rockbox/playback_options.tex
+++ b/manual/configure_rockbox/playback_options.tex
@@ -187,7 +187,7 @@ you to configure settings related to audio playback.
         decibel (dB) value between -12dB and +12dB, in increments of 0.1{}dB.
       \end{description}
 
-  \section{Beep Volume}
+  \section{Track Skip Beep}
     Controls the volume of the beep that is heard when
     skipping forward or backward between tracks. The beep is disabled when
     set to \setting{Off}.
