Updated italian language file.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21061 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/italiano.lang
+++ b/apps/lang/italiano.lang
@@ -1922,15 +1922,15 @@
   user: core
   <source>
     *: none
-    swcodec: "Beep Volume"
+    swcodec: "Track Skip Beep"
   </source>
   <dest>
     *: none
-    swcodec: "Volume Beep"
+    swcodec: "Beep Cambio Traccia"
   </dest>
   <voice>
     *: none
-    swcodec: "Volume beep"
+    swcodec: "beep Cambio Traccia"
   </voice>
 </phrase>
 <phrase>
