Specify that the Battery Capacity setting is used for runtime estimation, not battery percentage remaining.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21079 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/configure_rockbox/system_options.tex
+++ b/manual/configure_rockbox/system_options.tex
@@ -31,10 +31,10 @@
       \opt{gigabeats}{700mAh}%
       , which is the capacity value for the standard
       \opt{archos}{batteries}\nopt{archos}{battery} shipped with the \dap.
-        Rockbox uses this value to estimate remaining battery life for the
-        info screen and WPS. Changing this setting has no effect whatsoever on
+        Rockbox uses this value for runtime estimation, not battery percentage
+        calculation. Changing this setting has no effect whatsoever on
         actual battery life. This setting only affects the accuracy of the
-        battery life estimation as shown on screen.
+        runtime estimation as shown on screen.
       \opt{iaudio}{Rockbox does not automatically distinguish between the
         ``L'' models and the ``simple'' models which determine the default
         value. If your dap{} is an \opt{m5}{M5L}\opt{x5}{X5L} set the value
