Lua: add support for os library
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21106 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/plugins/lua/README
+++ b/apps/plugins/lua/README
@@ -1,7 +1,9 @@
 The following files are (with slight modifications for Rockbox) from dietlibc
 version 0.31 which is licensed under the GPL version 2:
 
+    gmtime.c
     strcspn.c
+    strftime.c
     strncat.c
     strpbrk.c
     strtol.c
