Add the Lua scripting language plugin to the manual.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21168 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/plugins/main.tex
+++ b/manual/plugins/main.tex
@@ -127,6 +127,8 @@ the associated file. Viewers are stored in the
 
 \opt{lcd_bitmap}{\input{plugins/jpegviewer.tex}}
 
+\opt{large_plugin_buffer}{\input{plugins/lua.tex}}
+
 \opt{swcodec}{\input{plugins/midiplay.tex}}
 
 \opt{recorder,recorderv2fm,ondio}{\input{plugins/movieplayer.tex}}
