Fix missed text change in beep volume, and adjust related strings to match (good for the keyclick setting too).
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21204 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/svenska.lang
+++ b/apps/lang/svenska.lang
@@ -1926,15 +1926,15 @@
   user: core
   <source>
     *: none
-    swcodec: "Beep Volume"
+    swcodec: "Track Skip Beep"
   </source>
   <dest>
     *: none
-    swcodec: "Pipvolym"
+    swcodec: "Pip vid spårhopp"
   </dest>
   <voice>
     *: none
-    swcodec: "Pipvolym"
+    swcodec: "Pip vid spårhopp"
   </voice>
 </phrase>
 <phrase>
@@ -1947,11 +1947,11 @@
   </source>
   <dest>
     *: none
-    swcodec: "Svag"
+    swcodec: "Svagt"
   </dest>
   <voice>
     *: none
-    swcodec: "Svag"
+    swcodec: "Svagt"
   </voice>
 </phrase>
 <phrase>
@@ -1981,11 +1981,11 @@
   </source>
   <dest>
     *: none
-    swcodec: "Stark"
+    swcodec: "Starkt"
   </dest>
   <voice>
     *: none
-    swcodec: "Stark"
+    swcodec: "Starkt"
   </voice>
 </phrase>
 <phrase>
